--- a/stories/ai-takes-over.html
+++ b/stories/ai-takes-over.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDaily - AI Takes Over</title>
 
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/style-answer.css" />
+
+    
 
 </head>
 
 <body>
 
-    <div class="header module">
+    <header class="header module">
 
         <div class="container">
 
@@ -30,40 +33,40 @@
 
                 </div>
 
-                <div class="pub-info_date">
+                <time class="pub-info_date">
 
                     January 04, 2026
 
-                </div>
+                </time>
 
             </div>
 
         </div>
 
-    </div>
+    </header>
 
     <div class="breadcrumbs">
 
-        <div class="container">
+        <nav class="container">
 
             <p><a href="../index.html">Back to Home</a></p>
 
-        </div>
+        </nav>
 
     </div>
 
-    <div class="main module">
+    <main class="main module">
 
         <div class="container">
 
-            <div class="main-article">
+            <article class="main-article">
 
                 <div class="main-article_cover">
 
                     <!-- <img src="https://via.placeholder.com/1200x600" alt="AI taking over the world"> -->
                     <img src="../img/ai-takes-over-cover.jpg" alt="AI taking over the world">
 
-                    <span class="caption">AI taking over the world - Photo By. Te Me Jonesy</span>
+                    <figcaption class="caption">AI taking over the world - Photo By. Te Me Jonesy</figcaption>
 
                 </div>
 
@@ -119,13 +122,13 @@
 
                 </div>
 
-            </div>
+            </article>
 
         </div>
 
-    </div>
+    </main>
 
-    <div class="footer module">
+    <footer class="footer module">
 
         <div class="container">
 
@@ -133,7 +136,7 @@
 
         </div>
 
-    </div>
+    </footer>
 
 </body>
 </html>
