--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDaily - AI Takes Over</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 
 <body>
     <header class="header module">
@@ -25,9 +24,9 @@
                     <span>Volume 88 | Issue 12</span>
                 </div>
 
-                <tie class="pub-info_date">
+                <time class="pub-info_date">
                     January 04, 2026
-                </tie> 
+                </time> 
 
             </div>
 
